--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Test Telegram WebApps API</title>
+   <title>Простая игра</title>
    <script src="https://telegram.org/js/telegram-web-app.js"></script> <!--Подключаем скрипт от телеграм-->
 
    <style>
@@ -50,8 +50,21 @@
    <p class="hint">Some little hint</p> <!--Просто текст-подсказка для проверки-->
    <button id="btn" class="button">Show/Hide Main Button</button> <!--Кнопка, чтобы скрыть / показать основную кнопку-->
    <button id="btnED" class="button">Enable/Disable Main Button</button> <!--Кнопка, чтобы сделать кнопку активной/неактивной-->
-</body>
 
+   <h1>Простая игра</h1>
+    <button id="clickButton" onclick="incrementCount()">Нажми меня!</button>
+    <p id="clickCount">Количество нажатий: <span id="count">0</span></p>
+
+    
+</body>
+<script>
+        let count = 0;
+
+        function incrementCount() {
+            count++;
+            document.getElementById('count').innerText = count;
+        }
+    </script>
 <script>
    let tg = window.Telegram.WebApp; //получаем объект webapp телеграма 
 
@@ -90,7 +103,7 @@
       tg.sendData("some string that we need to send"); 
       //при клике на основную кнопку отправляем данные в строковом виде
    });
-
+   
 
    let usercard = document.getElementById("usercard"); //получаем блок usercard 
 
