--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
          align-items: center;
          font-size: 18px;
       }
-
+      
       .hint{
          color: var(--tg-theme-hint-color);
       }
@@ -39,6 +39,15 @@
       #usercard{
          text-align: center;
       }
+      #clickButton {
+            font-size: 20px;
+            padding: 10px 20px;
+            cursor: pointer;
+        }
+        #clickCount {
+            font-size: 24px;
+            margin-top: 20px;
+        }
    </style>
 </head>
 
