--- a/index.html
+++ b/index.html
@@ -62,22 +62,39 @@
 </head>
 
 <body>
-   <div id="usercard"> <!--Карта профиля, человека, который к нам обратился-->
+<!--    <div id="usercard"> <!--Карта профиля, человека, который к нам обратился-->
    </div>
    <p>Just text</p> <!--Просто текст для проверки-->
    <a class="link" href="https://mihailgok.ru">Link</a> <!--Просто ссылка для проверки-->
    <p class="hint">Some little hint</p> <!--Просто текст-подсказка для проверки-->
    <button id="btn" class="button">Show/Hide Main Button</button> <!--Кнопка, чтобы скрыть / показать основную кнопку-->
-   <button id="btnED" class="button">Enable/Disable Main Button</button> <!--Кнопка, чтобы сделать кнопку активной/неактивной-->
+   <button id="btnED" class="button">Enable/Disable Main Button</button> <!--Кнопка, чтобы сделать кнопку активной/неактивной--> -->
 
    <h1>Простая игра</h1>
-    <button id="clickButton" onclick="incrementCount()">
+    <button id="clickButton" onclick="changeColor()">
         <img src="https://pngicon.ru/file/uploads/banan.png" alt="Банан"> Нажми меня!
     </button>
+   <h1>Нажми меня</h1>
     <p id="clickCount">Количество нажатий: <span id="count">0</span></p>
 
     
 </body>
+   <script>
+        function changeColor() {
+            var button = document.getElementById('clickButton');
+            var randomColor = getRandomColor();
+            button.style.backgroundColor = randomColor;
+        }
+
+        function getRandomColor() {
+            var letters = '0123456789ABCDEF';
+            var color = '#';
+            for (var i = 0; i < 6; i++) {
+                color += letters[Math.floor(Math.random() * 16)];
+            }
+            return color;
+        }
+    </script>
 <script>
         let count = 0;
 
