--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
          background-size: cover;
          background-repeat: no-repeat;
          background-attachment: fixed;
+         background-position: center center;
 /*          color: var(--tg-theme-text-color);
          background: var(--tg-theme-bg-color);
          display: flex;
