--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
          text-align: center;
       }
       #clickButton {
+            width: 500px;
+            height: 500px;
             font-size: 20px;
             padding: 10px 20px;
             cursor: pointer;
