--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <img src="https://pngicon.ru/file/uploads/banan.png" alt="Банан">
        <span id="counter">1</span>
     </button>
-   <h1>Нажми меня</h1>
+   <h1>Жми меня</h1>
     <p id="clickCount">Количество нажатий: <span id="count">0</span></p>
 
     
