--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             var randomColor = getRandomColor();
 
             // Изменение фона
-            document.body.style.backgroundImage = `url('${randomColor}')`;
+            // document.body.style.backgroundImage = `url('${randomColor}')`;
 
             // Отображение и анимация исчезновения цифры
             counter.classList.add('show-and-hide');
