--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       
     </button>
   <p id="clickCount">Количество нажатий: <span id="count">0</span></p>
-  <h1>Жми меня!</h1>
+  <h1>Нажми меня!</h1>
   
     <script>
         function changeBackgroundAndIncrement(event) {
