--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         body {
             text-align: center;
             margin-top: 50px;
-/*             background-image: url('https://i.pinimg.com/originals/6f/06/fd/6f06fd23b4ab34a36c4593dd0279e8bb.gif'); */
+            background-image: url('https://i.pinimg.com/originals/6f/06/fd/6f06fd23b4ab34a36c4593dd0279e8bb.gif');
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
