--- a/index.html
+++ b/index.html
@@ -26,15 +26,14 @@
             position: relative;
             background-color: transparent; /* Прозрачный фон */
             overflow: hidden;
+            transition: background-color 0.3s ease; /* Анимация перехода цвета кнопки */
         }
         #clickButton:active {
-            width: 250px;
-            height: 250px;
             background-color: rgba(192, 57, 43, 0.5); /* Цвет при активации (нажатии) */
         }
         #clickButton img {
-            width: 150px;
-            height: 150px;
+            width: 100px;
+            height: 100px;
             border-radius: 50%;
             margin-right: 10px;
         }
@@ -67,25 +66,23 @@
 </head>
 <body>
     <h1>Простая игра</h1>
-    <button id="clickButton" onclick="changeBackgroundAndIncrement()">
-        <img src="https://pngicon.ru/file/uploads/banan.png" alt="Банан">
+    <button id="clickButton" onclick="changeColorAndIncrement()">
+        <img src="https://pngicon.ru/file/uploads/banan.png" alt="Банан"> Нажми меня!
         <span id="counter">1</span>
     </button>
-     <p id="clickCount">Количество нажатий: <span id="count">0</span></p>
+    <p id="clickCount">Количество нажатий: <span id="count">0</span></p>
     <script>
-        function changeBackgroundAndIncrement() {
+        function changeColorAndIncrement() {
             var button = document.getElementById('clickButton');
             var counter = document.getElementById('counter');
             var randomColor = getRandomColor();
 
-            // Изменение фона
-            document.body.style.backgroundImage = `url('${randomColor}')`;
+            // Изменение цвета кнопки
+            button.style.backgroundColor = randomColor;
 
             // Отображение и анимация исчезновения цифры
             counter.classList.remove('show-and-hide');
             void counter.offsetWidth; // Перезапускаем анимацию
-            counter.style.left = `${button.offsetWidth / 2}px`; // Устанавливаем позицию анимации по X
-            counter.style.top = `${button.offsetHeight / 2}px`; // Устанавливаем позицию анимации по Y
             counter.classList.add('show-and-hide');
 
             // Увеличение счетчика
@@ -108,3 +105,6 @@
     </script>
 </body>
 </html>
+
+
+
