--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
             transition: background-color 0.3s ease; /* Анимация перехода цвета кнопки */
         }
         #clickButton:active {
-            width: 260px;
-            height: 260px;
+            width: 255px;
+            height: 255px;
             background-color: rgba(192, 57, 43, 0.5); /* Цвет при активации (нажатии) */
         }
         #clickButton img {
-            width: 150px;
-            height: 150px;
+            width: 100px;
+            height: 100px;
             border-radius: 50%;
             margin-right: 10px;
         }
@@ -71,7 +71,7 @@
 <body>
     <h1>Простая игра</h1>
     <button id="clickButton" onclick="changeColorAndIncrement()">
-        <img src="https://pngicon.ru/file/uploads/banan.png" alt="Банан"> 
+        <img src="https://pngicon.ru/file/uploads/banan.png" alt="Банан"> Нажми меня!
         <span id="counter">1</span>
     </button>
     <p id="clickCount">Количество нажатий: <span id="count">0</span></p>
@@ -98,17 +98,18 @@
             return `rgb(${Math.floor(Math.random() * 256)}, ${Math.floor(Math.random() * 256)}, ${Math.floor(Math.random() * 256)})`;
         }
 
-        
-    </script>
-    <script>
-        let count = 0;
         function incrementCount() {
-            count++;
-            document.getElementById('count').innerText = count;
+            var counter = document.getElementById('counter');
+            counter.textContent = parseInt(counter.textContent) + 1;
         }
     </script>
 </body>
 </html>
+
+
+
+
+
 
 
 
