--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 <body>
     <h1>Простая игра</h1>
     <button id="clickButton" onclick="changeColorAndIncrement()">
-        <img src="https://pngicon.ru/file/uploads/banan.png" alt="Банан"> Нажми меня!
+        <img src="https://pngicon.ru/file/uploads/banan.png" alt="Банан"> 
+        <h1>Нажми меня!</h1>
         <span id="counter">1</span>
     </button>
     <p id="clickCount">Количество нажатий: <span id="count">0</span></p>
