--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             transition: background-image 0.3s ease; /* Анимация перехода фона */
         }
         #clickButton {
+            width: 250px;
+            height: 250px;
             font-size: 20px;
             padding: 10px 20px;
             cursor: pointer;
@@ -29,6 +31,8 @@
             transition: background-color 0.3s ease; /* Анимация перехода цвета кнопки */
         }
         #clickButton:active {
+            width: 254px;
+            height: 254px;
             background-color: rgba(192, 57, 43, 0.5); /* Цвет при активации (нажатии) */
         }
         #clickButton img {
@@ -72,9 +76,9 @@
         <span id="counter">1</span>
     </button>
 <p id="clickCount">Количество нажатий: <span id="count">0</span></p>
-  
+
     <script>
-        function changeColorAndIncrement() {
+        function changeColorAndIncrement(event) {
             var button = document.getElementById('clickButton');
             var counter = document.getElementById('counter');
             var randomColor = getRandomColor();
@@ -85,6 +89,8 @@
             // Отображение и анимация исчезновения цифры
             counter.classList.remove('show-and-hide');
             void counter.offsetWidth; // Перезапускаем анимацию
+            counter.style.left = `${event.clientX}px`; // Устанавливаем позицию анимации по X
+            counter.style.top = `${event.clientY}px`; // Устанавливаем позицию анимации по Y
             counter.classList.add('show-and-hide');
 
             // Увеличение счетчика
@@ -95,7 +101,10 @@
             // Возвращает случайный цвет в формате rgb
             return `rgb(${Math.floor(Math.random() * 256)}, ${Math.floor(Math.random() * 256)}, ${Math.floor(Math.random() * 256)})`;
         }
+
+        
     </script>
+
     <script>
         let count = 0;
         function incrementCount() {
