--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             transition: background-image 0.3s ease; /* Анимация перехода фона */
         }
         #clickButton {
+            width: 250px;
+            height: 250px;
             font-size: 20px;
             padding: 10px 20px;
             cursor: pointer;
@@ -29,6 +31,8 @@
             transition: background-color 0.3s ease; /* Анимация перехода цвета кнопки */
         }
         #clickButton:active {
+            width: 254px;
+            height: 254px;
             background-color: rgba(192, 57, 43, 0.5); /* Цвет при активации (нажатии) */
         }
         #clickButton img {
@@ -70,7 +74,7 @@
         <img src="https://pngicon.ru/file/uploads/banan.png" alt="Банан"> Нажми меня!
         <span id="counter">1</span>
     </button>
-
+    <p id="clickCount">Количество нажатий: <span id="counter">0</span></p>
     <script>
         function changeColorAndIncrement(event) {
             var button = document.getElementById('clickButton');
