--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
 <body>
     <h1>Простая игра</h1>
     <button id="clickButton" onclick="changeColorAndIncrement(event)">
-        <img src="https://pngicon.ru/file/uploads/banan.png" alt="Банан"> Нажми меня!
+        <img src="https://pngicon.ru/file/uploads/banan.png" alt="Банан"> 
         <span id="counter">1</span>
+        <h2>Жми меня</h2>
     </button>
     <p id="clickCount">Количество нажатий: <span id="counter">0</span></p>
     <script>
